--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
         "tailwindcss": "^0.7.4",
         "vue": "^2.5.17"
     },
-    "dependencies": {}
+    "dependencies": {
+        "vue-template-compiler": "^2.6.10"
+    }
 }
